Snapshot d38cacfe2c

* Add icons to the activity ring palette. (danw)

Snapshot e83b98a8f6

* #2912: Improvements to GlibURLDownloader API (dcbw)
* #2299: Really fix buddy properties coming through as arrays of bytes (dcbw)

Snapshot b24a28a77d

* #2012: Fix palette position on the left frame panel. (marco)
* #2297: Make activity name translatable. (danw)
* #2695: Recognize text files as such. (tomeu)
* #2669: Add a border to the inner of the frame. (marco)
* #2703: Update macedonian translation. (ArangelAngov)
* #2543: Offer multiple activities for opening clipboard objects. (tomeu)

Snapshot d93122bf5e

* #2751 Add keybindings for max/min brightness/volume

Snapshot 040c94d181

* #2099 Tweak a color pair as requested by Walter. (marco)
* Draw an invoker that is connected with the palette for toolbuttons. (benzea)
* Fix traceback when reading in saved WPA2 network configs (dcbw)
* #2475 Retrieve correctly the file path for files in removable devices. (tomeu)
* #2119 If config is missing start intro. (marco)
* #2083 Fix centering of items in the spread box. (marco)
* #2486 In the intro screen name page enter goes to next page. (marco)
* #2570 Accept correctly image drops from Record.
* Add Greek translation. (simosx)
* #2564 Use the activity service name as the base name for translation files.
  (tomeu)
* Add WPA support (miguel, dcbw)
* Fix clipboard support for text from Browse. (tomeu)
* #2511 Fix journal entries background in the object chooser. (tomeu)
* Activity launching now timeout after 120 seconds. (marco)
* Add timeout arg to sugar.datastore.Datastore. (tomeu)
* Presence Service monitor in dev console (smcv)
* Turn off logging by default.  Logs may be re-enabled on a per-module basis
  by adding environment variables like SHELL_DEBUG and RECORD_DEBUG to
  the sugar environment

Snapshot 088c7612e3

* Don't follow the cursor when expanding to secondary palette. (marco)
* #2370 Update spanish translation. (marco)