@@ -1,3 +1,5 @@
+* #2010 Remember state when scrubbing. (marco)
+
 Snapshot d38cacfe2c
 
 * Add icons to the activity ring palette. (danw)
